--- a/src/style/focus.css
+++ b/src/style/focus.css
@@ -1,7 +1,8 @@
 .focus-tab:focus-visible,
 .focus-tab:has(:focus-visible) {
-  outline: 2px solid var(--color-fg1);
-  outline-offset: 2px;
+  outline: 3px solid var(--color-bg2);
+  outline-offset: -3px;
+  box-shadow: 0 0 0 3px var(--color-fg1);
 }
 
 .focus-outline:focus-visible,
@@ -18,8 +19,9 @@
 
 .focus-selected:focus-visible,
 .focus-selected:has(:focus-visible) {
-  outline: 2px solid var(--color-fg1);
-  outline-offset: 2px;
+  outline: 2px solid var(--color-bg1);
+  outline-offset: -2px;
+  box-shadow: 0 0 0 3px var(--color-fg1);
 }
 
 .focus-none:focus {
